--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -28,6 +28,12 @@ env:
     - SECRET_KEY_BASE
     - GOOGLE_CLIENT_ID
     - GOOGLE_CLIENT_SECRET
+    - ENABLE_RECAPTCHA
+    - RECAPTCHA_V3_SITE_KEY
+    - RECAPTCHA_V3_SECRET_KEY
+    - RECAPTCHA_V2_SITE_KEY
+    - RECAPTCHA_V2_SECRET_KEY
+
   clear:
     # Run Solid Queue inside Puma process
     SOLID_QUEUE_IN_PUMA: true
