Update digest to work via smtp

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ RECAPTCHA_V3_SECRET_KEY=
 RECAPTCHA_V2_SITE_KEY=
 RECAPTCHA_V2_SECRET_KEY=
 
-# Legacy (Optional, remove if unused)
-# RECAPTCHA_SITE_KEY=
-# RECAPTCHA_SECRET_KEY=
+# Email Sending
+#EMAIL_DELIVERY_METHOD=smtp # Turn on to send in real email in dev
+SMTP_USERNAME=
+SMTP_PASSWORD=
